# confManager

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: googleTestCpp.yml
demoApp/: CMakeLists.txt  demoConfReader.cpp
inc/: ConfHandle.h  test.hpp
src/: test.cpp
tests/: CMakeLists.txt  tests.cc
